    be caught using IGNORE-ERRORS.
  * Bug 48a./b. fixed: SYMBOL-MACROLET now refuses to bind symbols
    that are names of constants or global variables.
  * Bug fix: DEFINE-ALIEN-ROUTINE now declaims the correct FTYPE for
    alien routines with docstrings.
  * Bug 184 fixed: Division of ratios by the integer 0 now signals an
    error of type DIVISION-BY-ZERO. (thanks to Wolfhard Buss and
    Raymond Toy)
  * Bug fix: Errors in PARSE-INTEGER are now of type PARSE-ERROR.
    (thanks to Eric Marsden)
  * Bug fix: COERCE to (COMPLEX FLOAT) of rationals now returns an
    object of type (COMPLEX FLOAT). (thanks to Wolfhard Buss)
  * Bug fix: The SPARC backend can now compile functions involving
    LOGAND and stack-allocated arguments. (thanks to Raymond Toy)
  * Bug fix: We no longer segfault on passing a non-FILE-STREAM stream
    to a functions expecting a PATHNAME-DESIGNATOR.
  * Minor incompatible change: COMPILE-FILE-PATHNAME now merges its
    OUTPUT-FILE argument with its INPUT-FILE argument, resulting in
    behaviour analogous to RENAME-FILE.  This puts its behaviour more
    in line with ANSI's wording on COMPILE-FILE-PATHNAME. (thanks to
    Marco Antinotti)

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
  now does what ANSI says it should. The CMU-CL-style 
  SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.